fix: correctly align days in calendar (#74)

--- a/assets/css/_calendar.scss
+++ b/assets/css/_calendar.scss
@@ -12,15 +12,17 @@
         z-index: -2;
         width: 100%;
         height: 100%;
-        background: linear-gradient(60deg,
-                hsl(224, 85%, 66%),
-                hsl(269, 85%, 66%),
-                hsl(314, 85%, 66%),
-                hsl(359, 85%, 66%),
-                hsl(44, 85%, 66%),
-                hsl(89, 85%, 66%),
-                hsl(134, 85%, 66%),
-                hsl(179, 85%, 66%));
+        background: linear-gradient(
+            60deg,
+            hsl(224, 85%, 66%),
+            hsl(269, 85%, 66%),
+            hsl(314, 85%, 66%),
+            hsl(359, 85%, 66%),
+            hsl(44, 85%, 66%),
+            hsl(89, 85%, 66%),
+            hsl(134, 85%, 66%),
+            hsl(179, 85%, 66%)
+        );
         background-size: 300% 300%;
         background-position: 0 50%;
         border-radius: calc(2 * var(--border-width));
@@ -100,8 +102,6 @@
                 background-color: $link-color;
             }
         }
-
-
     }
 
     .day {
@@ -228,11 +228,10 @@
         grid-column: 6;
     }
 
-    .day-6:first-child {
+    .day-7:first-child {
         grid-column: 7;
     }
 }
-
 
 .overlay {
     position: fixed;
